Added faxicon, fixed formatting

--- a/daw-project.css
+++ b/daw-project.css
@@ -1,5 +1,5 @@
 .tunesville{
-  font-family: 'VT323', sans-serif;
+  font-family: 'Chivo Mono', sans-serif;
   display: flex; 
   flex-direction: column; 
   font-size: 20px;
