--- a/construction.css
+++ b/construction.css
@@ -9,7 +9,7 @@
   justify-content: center; 
   align-items: center; 
   text-align: center; 
-  font-family: 'VT323', sans-serif;
+  font-family: 'Chivo Mono', sans-serif;
   font-size: 50px; 
   line-height: 50px; 
   
