--- a/styles/previous.css
+++ b/styles/previous.css
@@ -22,7 +22,7 @@
 
 .name-for-beat-container{
   font-size: 20px; 
-  padding-right: 20px; 
+  padding-left: 75px; 
 }
 
 .name-for-beat{
@@ -34,5 +34,6 @@
 @media (max-width: 1150px){
   .name-for-beat-container{
     text-align: center !important; 
+    padding-left: 0;
   }
 }
